# BayHawk2.0

./: .env.example  .gitignore  README.md  bayhawk.db  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertBanner.tsx  DeescalationTimeline.tsx  DronePanel.tsx  DroneSystemPanel.tsx  Header.tsx  IncidentReport.tsx  LiveIngestion.tsx  MultiCameraView.tsx  SMSPanel.tsx  Sidebar.tsx  SpatialMonitoring.tsx  StatsPanel.tsx  StatusBar.tsx  VisualReasoning.tsx  WeatherPanel.tsx
frontend/src/context/: PipelineContext.tsx  ThemeContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/services/: api.ts  cameras.ts  sms.ts  weather.ts
frontend/src/types/: pipeline.ts
gateway/app/: __init__.py  config.py  dependencies.py  main.py
gateway/app/ai/: __init__.py
gateway/app/core/: __init__.py  auth.py  exceptions.py  security.py
gateway/app/db/: __init__.py  models.py  session.py
gateway/app/middleware/: __init__.py  cors.py  logging.py  rate_limit.py
gateway/app/routers/: __init__.py  ai.py  auth.py  cameras.py  scans.py  sms.py
gateway/app/schemas/: __init__.py  cameras.py  routers.py  scan_data.py  sweep.py
gateway/app/services/: __init__.py  camera_registry_sweep.py  scanner.py  storage.py
gateway/app/services/ai/: __init__.py
gateway/app/services/ai/agents/: __init__.py  base.py  camera.py  classification.py  collection_cache.py  firms_area.py  fusion.py  geo_hints.py  http_retry.py  orchestrator.py  output.py  reasoning.py  satellite.py  suggestion.py  ttl_cache.py  weather.py
gateway/app/services/ai/prompt/: __init__.py  templates.py
gateway/app/services/ai/schemas/: __init__.py  pipeline.py
gateway/scripts/: smoke_collection_agents.py
gateway/tests/: conftest.py  test_agent_schema_contract.py  test_camera_parsing.py  test_collection_agents.py  test_collection_cache.py  test_fusion_tuning.py  test_http_retry.py  test_orchestrator_stage1.py  test_weather_owm.py
src/: __init__.py
streamlit_demo/: app.py  requirements.txt
streamlit_demo/.streamlit/: config.toml
tests/: conftest.py  test_pipeline.py
